appId: com.example.capstoneProject
---
- launchApp
- tapOn: "EXPLORE LOCAL PREVIEW"
- tapOn: "Map & Navigation"
- assertVisible: "Pedro Dela Cruz"
- assertVisible: "START NAVIGATION"
